[package]
name = "bls-signature-sgx"
version = "0.8.0"
authors = [
    "Jinghui Liao <jinghui@wayne.edu>",
    "Nikita Khateev <nikita.khateev@dsr-corporation.com>",
    "Kirk Baird <baird.k@outlook.com>"]
description = "The Apache Milagro Cryptographic Library (version 3) for SGX"
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-milagro-crypto-rust"
edition = "2018"
#https://github.com/razor-network/solidity-bls/tree/master/contracts
[dependencies]
hex                   = {optional = true, tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-hex-sgx"}
serde_sgx             = {optional = true, package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json-sgx        = {optional = true,  package = "serde_json", git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde_derive          = { optional = true, git = "https://github.com/mesalock-linux/serde-sgx" }
#criterion = "0.3.0"
sgx_rand              = { optional = true, rev = "v1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd              = { optional = true, version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_types             = { optional = true, version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_alloc             = { optional = true, version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}
sgx_tunittest         = { optional = true, version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.5"}

[features]
default               = ["bls381", "sgx"]
bls381                = []
sgx                   = ["sgx_tstd", "sgx_rand", "serde_derive", "serde_json-sgx", "serde_sgx", "hex", "sgx_types", "sgx_alloc", "sgx_tunittest"]
